bootstrap theme label align issue fixed

--- a/djangocms_admin_style/static/djangocms_admin_style/css/djangocms-admin.css
+++ b/djangocms_admin_style/static/djangocms_admin_style/css/djangocms-admin.css
@@ -10304,3 +10304,7 @@ a.cms-pagetree-header-lang:link {
   .popup.change-list #changelist .paginator,
   .popup.change-list #changelist.filtered .paginator {
     width: calc(100% - 30px - 40px) !important; } }
+
+form .aligned .aldryn-bootstrap3 label + label {
+  margin-left: 0px;
+}
